--- a/website.html
+++ b/website.html
@@ -17,15 +17,15 @@
         <h1>RAJAGIRI WEBSITE</h1>
     </div>
     <div class="divstyle",>
-        <a href=" ">Home</a>
-        <a href=" ">About</a>
-        <a href=" ">Gallery</a>
-        <a href=" ">Contacts</a> 
+       <div><a href="#home">Home</a></div>
+       <div><a href="">About</a></div>
+       <div><a href="">Gallery</a></div>
+        <div><a href="">Contacts</a></div> 
     </div>
     <div>
-        <div>
-            <p>Name:</p>
-            <p>Address:</p>
+        <div id="home">
+            <p>Name:Rajagiri School Of Engineering And Technology</p>
+            <p>Address:Rajagiri</p>
             <p>About:</p>
             <table>
                 <thead>
