--- a/website.html
+++ b/website.html
@@ -5,28 +5,46 @@
     </head>
 </div>
     <style>
+        .hd
+        {
+        background:orangered;
+        padding: 5px;
+        }
         .divstyle
-        {display:flex;
-        background:paleturquoise;
-        padding: 0.5em;
+        {display: flex;
+         background:paleturquoise;
+         padding:0.5em;
+        }
+        .alg
+        {
+        text-align:center;
+        color:lightcoral;
+        }
+        .flx
+        {
+         padding:10px 10px 10px 10px;
         }
     </style>
 <body>
     <section>
-    <div>
+    <div class="hd">
         <h1>RAJAGIRI WEBSITE</h1>
     </div>
-    <div class="divstyle",>
-       <div><a href="#home">Home</a></div>
-       <div><a href="">About</a></div>
-       <div><a href="">Gallery</a></div>
-        <div><a href="">Contacts</a></div> 
+    <div class="divstyle">
+       <div class="flx"><a href="#home">Home</a></div>
+       <div class="flx"><a href="">About</a></div>
+       <div class="flx"><a href="">Gallery</a></div>
+       <div class="flx"><a href="">Contacts</a></div> 
     </div>
     <div>
         <div id="home">
+            <img src="download.jpeg">
             <p>Name:Rajagiri School Of Engineering And Technology</p>
             <p>Address:Rajagiri</p>
-            <p>About:</p>
+            <p>Email:RajagiriSchool@gmail.com</p>
+            <h2 class="alg">ABOUT</h2>
+            <p>Rajagiri School of Engineering & Technology (Autonomous) (RSET) is an educational institution located in Kochi, Kerala, India, offering engineering education and research. RSET is affiliated to APJ Abdul Kalam Technological University[3] and approved by the All India Council for Technical Education (AICTE).[4]
+                RSET is managed by the Sacred Heart Province of the Carmelites of Mary Immaculate (CMI) congregation. RSET is a part of the Rajagiri Vidyapeetham (transl. "seat of knowledge"). </p>>
             <table>
                 <thead>
                 <h2>QUALIFICATION</h2>
