--- a/website.html
+++ b/website.html
@@ -17,8 +17,11 @@
         }
         .alg
         {
-        text-align:center;
         color:lightcoral;
+        }
+        .gly
+        {
+        color:brown;
         }
         .flx
         {
@@ -27,36 +30,41 @@
     </style>
 <body>
     <section>
+    <img src="images.png">
     <div class="hd">
         <h1>RAJAGIRI WEBSITE</h1>
     </div>
     <div class="divstyle">
        <div class="flx"><a href="#home">Home</a></div>
-       <div class="flx"><a href="">About</a></div>
+       <div class="flx"><a href="#abt">About</a></div>
        <div class="flx"><a href="">Gallery</a></div>
        <div class="flx"><a href="">Contacts</a></div> 
     </div>
     <div>
         <div id="home">
-            <img src="download.jpeg">
+            <h2>HOME</h2>
+            <img src="rajagiri.jpeg" width="500" height="300">
             <p>Name:Rajagiri School Of Engineering And Technology</p>
-            <p>Address:Rajagiri</p>
-            <p>Email:RajagiriSchool@gmail.com</p>
+            <p>Address:X9V5+96P, Rajagiri Valley Rd, Rajagiri Valley, Kakkanad, Kerala 682039</p>
+        </div>
+        <div id="abt">
             <h2 class="alg">ABOUT</h2>
             <p>Rajagiri School of Engineering & Technology (Autonomous) (RSET) is an educational institution located in Kochi, Kerala, India, offering engineering education and research. RSET is affiliated to APJ Abdul Kalam Technological University[3] and approved by the All India Council for Technical Education (AICTE).[4]
-                RSET is managed by the Sacred Heart Province of the Carmelites of Mary Immaculate (CMI) congregation. RSET is a part of the Rajagiri Vidyapeetham (transl. "seat of knowledge"). </p>>
-            <table>
-                <thead>
-                <h2>QUALIFICATION</h2>
-                <tr>
-                <td>Sl no.</td>
-                <td>Level of Education</td>
-                <td>Year of Passing</td>
-                </tr>
-                </thead>
-                     <tbody>
-                        <tr>1.</tr>
-
+                RSET is managed by the Sacred Heart Province of the Carmelites of Mary Immaculate (CMI) congregation. RSET is a part of the Rajagiri Vidyapeetham (transl. "seat of knowledge"). </p>
+        </div>
+        <div>
+            <h2 class="gly">Gallery</h2>
+            <img src="images.jpeg">
+            <img src="raja.jpeg">
+            <img src="rajahill.jpeg">
+            <img src="download.jpeg">
+            <img src="audi.jpeg">
+            <img src="cant.jpeg">
+            <img src="mech.jpeg">
+            <img src="lib.jpeg">
+            <img src="main.jpeg">
+            <img src="mechanic.jpeg">
+            <img src="conf.jpeg">
         </div>
     </div>
     </section>
