--- a/index.html
+++ b/index.html
@@ -1,52 +1,80 @@
 <!DOCTYPE html>
-<html>
+<div>
     <head>
-        <title>Resume</title>
+        <title>Website</title>
     </head>
+</div>
     <style>
-        .style
-        {color:plum}
-        .st
-        {text-align: center;}
+        .hd
+        {
+        background:darkred;
+        padding: 5px;
+        }
+        .divstyle
+        {display: flex;
+         background:paleturquoise;
+         padding:0.5em;
+        }
+        .alg
+        {
+        color:lightcoral;
+        }
+        .gly
+        {
+        color:brown;
+        }
+        .flx
+        {
+         padding:10px 10px 10px 10px;
+        }
     </style>
-    <body>
-        <h1 class="style">
-            MEENAKSHI SAJI
-        </h1>
-        <p>Age:19</p> 
-        <p>Address:Madhurayil House,Mamatha Nagar,Edapally P.O,Kochi</p>
-        <p>Email:meenakshisaji123@gmail.com</p>
-        <table>
-            <thead>
-                <h2>Qualification</h2>
-                <tr class="st">
-                    <td>Sl no.</td>
-                    <td>Level Of Education</td>
-                    <td>Year of passing</td>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr class="st">
-                        <td>1</td>
-                        <td>10th CBSE</td>
-                        <td>2019</td>
-                    </tr>
-                    <tr class="st">
-                        <td>2</td>
-                        <td>12th CBSE</td>
-                        <td> 2021</td>
-                    </tr>
-                    <tr class="st">
-                        <td>3</td>
-                        <td>BTECH in Computer Science</td>
-                        <td>2025</td>
-                    </tr>
-                </tbody>
-                
-        </table>
-        <h3>DESCRIPTION</h3>
-        <p>This is a resume giving information about myself and my qualifications.I'm well versed in C,HTML and Java languages and would be able to create a software/websites using the said languages.My aim is to improve the current technology and potentially innovate a new one for the betterment of the future.</p>
-        <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fyt3.googleusercontent.com%2F_q52i8bUAEvcb7JR4e-eNTv23y2A_wg5sCz0NC0GrGtcw1CRMWJSOPVHUDh_bngD0q4gMvVeoA%3Ds900-c-k-c0x00ffffff-no-rj&tbnid=WJ-pSuA3dhNm8M&vet=12ahUKEwjFsI2axeX-AhU2odgFHQr8AwwQMygEegUIARDsAQ..i&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCs5Y5_7XK8HLDX0SLNwkd3w&docid=0QJD5XegABnkXM&w=900&h=900&q=vs%20code&client=ubuntu&ved=2ahUKEwjFsI2axeX-AhU2odgFHQr8AwwQMygEegUIARDsAQ">
-        <a href=https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2F2EfHtzauHcM%2Fmaxresdefault.jpg&tbnid=pkGDQLD7CKWcXM&vet=12ahUKEwjJucWowOX-AhWFjtgFHb82AlsQMygJegUIARD9AQ..i&imgrefurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D2EfHtzauHcM&docid=cXGc-qKjoJvusM&w=1280&h=720&q=golden%20retriver%20puppy&client=ubuntu&ved=2ahUKEwjJucWowOX-AhWFjtgFHb82AlsQMygJegUIARD9AQ>Click here!</a>
-    </body> 
+<body>
+    <section>
+    <img src="images.png">
+    <div class="hd">
+        <h1>RAJAGIRI WEBSITE</h1>
+    </div>
+    <div class="divstyle">
+       <div class="flx"><a href="#home">Home</a></div>
+       <div class="flx"><a href="#abt">About</a></div>
+       <div class="flx"><a href="#gal">Gallery</a></div>
+       <div class="flx"><a href="#cont">Contacts</a></div> 
+    </div>
+    <div>
+        <div id="home">
+            <h2>HOME</h2>
+            <img src="rajagiri.jpeg" width="500" height="300">
+            <p>Name:Rajagiri School Of Engineering And Technology</p>
+            <p>Address:X9V5+96P, Rajagiri Valley Rd, Rajagiri Valley, Kakkanad, Kerala 682039</p>
+        </div>
+        <div id="abt">
+            <h2 class="alg">ABOUT</h2>
+            <p>Rajagiri School of Engineering & Technology (Autonomous) (RSET) is an educational institution located in Kochi, Kerala, India, offering engineering education and research. RSET is affiliated to APJ Abdul Kalam Technological University[3] and approved by the All India Council for Technical Education (AICTE).[4]
+                RSET is managed by the Sacred Heart Province of the Carmelites of Mary Immaculate (CMI) congregation. RSET is a part of the Rajagiri Vidyapeetham (transl. "seat of knowledge"). </p>
+                <p>A premier Institute in higher education, RSET - Rajagiri School of Engineering and Technology is grounded in Kochi, Kerala since 2001. Institute offers Degree courses including 10 UG and 6 PG courses. These programs are offerred in Full Time mode. RSET - Rajagiri School of Engineering and Technology is a reputed institute for M.E./M.Tech, B.E. / B.Tech courses. Students can chose from these programs to persue their career in higher studies. Institute enjoys a good reputation for courses like M.E./M.Tech, B.E. / B.Tech in the streams of Engineering, IT & Software Students can opt courses from these. Over the period, RSET - Rajagiri School of Engineering and Technology has gained expertize through its trained and experienced faculty in the fields of Electrical Engineering, Communications Engineering, Computer Science Engineering, Information Technology, VLSI Design, Artificial Intelligence & Machine Learning, Electronics & Communication Engineering, Civil Engineering, Mechanical Engineering. Courses offered by institute are recognized by approving bodies like AICTE. Courses offered by the Institute for total of 936 students. Institute has a well supported campus with facilities like Auditorium, Boys Hostel, Cafeteria, Co-ed Hostel, Girls Hostel, Gym, Hospital / Medical Facilities, Hostel, Labs, Library, Sports Complex, Wi-Fi Campus.</p>
+        </div>
+        <div id="gal">
+            <h2 class="gly">Gallery</h2>
+            <img src="images.jpeg">
+            <img src="raja.jpeg">
+            <img src="rajahill.jpeg">
+            <img src="download.jpeg">
+            <img src="audi.jpeg">
+            <img src="cant.jpeg">
+            <img src="mech.jpeg">
+            <img src="lib.jpeg">
+            <img src="main.jpeg">
+            <img src="mechanic.jpeg">
+            <img src="conf.jpeg">
+        </div>
+        <div id="cont">
+            <h2>CONTACTS</h2>
+            <p>Phone:0482 3847399</p>
+            <p>Email:RSET@rajagiri.educ.in</p>
+            <p>Tel: +91 384 5834784</p>
+            <p>Fax: +91 384 6849202</p>
+        </div>
+    </div>
+    </section>
+</body>
 </html>
