--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,10 @@
         }
         .button
         {
+            height:30px;
+            width:340px;
             display:inline-block;
+            background:rgb(30, 99, 202);
         }
     </style>
     <body>
@@ -43,6 +46,6 @@
         <textarea name="Message" id="Message" cols="40" rows="10"></textarea>
         <br>
         <br>
-        <input type="submit" value="Send Message">
+        <input type="submit" value="Send Message" class="button">
     </body>
 </html>
