--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                 </tbody>
                 
         </table>
-        <h3>DESCRIPTION</h3>
+        <h3>ABOUT</h3>
         <p>This is a resume giving information about myself and my qualifications.I'm well versed in C,HTML and Java languages and would be able to create a software/websites using the said languages.My aim is to improve the current technology and potentially innovate a new one for the betterment of the future.</p>
         <img src=
     </body> 
