--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,17 @@
             display:inline-block;
             background:rgb(30, 99, 202);
         }
+        .cform
+        {
+            justify-content:center;
+            display:flex;
+        }
     </style>
     <body>
         <h1 class="alg">Contact Us</h1>    
         <p class="alg">Got a question?We'd love to hear fom you.Send us a message and we'll respond to you as soon as possible</p>
+        <div class="cform">
+            <form>
         <br>
         <label class="alg">Name:</label>
         <br>
@@ -47,5 +54,7 @@
         <br>
         <br>
         <input type="submit" value="Send Message" class="button">
+            </form>
+        </div>
     </body>
 </html>
