--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Contact</title>
+        <title>Submit Alert</title>
+        <script>
+            function showAlert(){
+                alert("Submit Button clicked!");
+            }
+        </script>
     </head>
     <style>
         .alg
@@ -37,23 +43,23 @@
         <p class="alg">Got a question?We'd love to hear fom you.Send us a message and we'll respond to you as soon as possible</p>
         <div class="cform">
             <form>
-        <br>
-        <label class="alg">Name:</label>
-        <br>
-        <input type="text" name="Name" id="Name" size="50">
-        <br>
-        <br>
-        <label class="alg">Email Address:</label>
-        <br>
-        <input type="email" name="Email Address" id="Email Address" size="50">
-        <br>
-        <br>
-        <label class="alg">Message:</label>
-        <br>
-        <textarea name="Message" id="Message" cols="40" rows="10"></textarea>
-        <br>
-        <br>
-        <input type="submit" value="Send Message" class="button">
+                <br>
+                <label class="alg">Name:</label>
+                <br>
+                <input type="text" name="Name" id="Name" size="50">
+                <br>
+                <br>
+                <label class="alg">Email Address:</label>
+                <br>
+                <input type="email" name="Email Address" id="Email Address" size="50">
+                <br>
+                <br>
+                <label class="alg">Message:</label>
+                <br>
+                <textarea name="Message" id="Message" cols="40" rows="10"></textarea>
+                <br>
+                <br>
+                <input type="submit" value="Send Message" class="button" onclick="showAlert()" />
             </form>
         </div>
     </body>
