--- a/registration.html
+++ b/registration.html
@@ -16,22 +16,37 @@
         {
             background:white;
             height:460px;
-            width:650px;
+            width:600px;
             margin-top:100px;
+            padding-left:45px;
+            padding-top:20px;
+            padding-right:45px;
         }
     </style>
     <body>
         <div class="box">
-        <form>
+            <form>
             <h2>Registration Form</h2>
-            <label for="Name">First Name</label>
-            <br>
-            <input type="text" name="First Name" id="Name">
+            <div style="display:flex;">
+                <div style="padding-right:20px;">
+                    <label for="Name">First Name</label>
+                    <br>
+                    <input type="text" name="First Name" id="Name" size="30">
+                </div>
             <div>
-                <label for="Second Name">Second Name</label>
+                <label for="Last Name">Second Name</label>
                 <br>
-                <input type="text" name="Second Name" id="Second Name">
+                <input type="text" name="Second Name" id="Last Name" size="30">
             </div>
-        </form>
+            </div>
+            <div style="d">            
+                <div style="padding-top:30px">
+                <label for="Name">Birthday</label>
+                <br>
+                <input type="date" name="date" id="date">
+                </div>
+            </div>
+            </form>
+        </div>
     </body>
 </html>
