--- a/registration.html
+++ b/registration.html
@@ -87,11 +87,11 @@
                 <br>
                 <select name="subject" id="subject">
                     <option value="Choose Option">Choose Option</option>
-                    <option value="Computer Science">Computer Science</option>
-                    <option value="Electronics and Communications">Electronics and Communications</option>
+                    <option value="Computer Science">Computer Science Engineering</option>
+                    <option value="Electronics and Communications">Electronics and Communications Engineering</option>
                     <option value="Applied Electronics and Instrumental">Applied Electronics and Instrumental</option>
-                    <option value="Mechanical">Meechanical</option>
-                    <option value="Electrical and Electronics">Electrical and Electronics</option>
+                    <option value="Mechanical">Mechanical Engineering</option>
+                    <option value="Electrical and Electronics">Electrical and Electronics Engineering</option>
                     <option value="Artificial Intelligence and Data Science">Artificial Intelligence and Data Science</option>
                 </select>
             </div>
